commiting for learning

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Generate a random color</h1>
     <br>
-    <button>Generate </button>
+    <button>Generate by clicking here </button>
     <br>
     <br><br>
     <div>This is your color </div>
